MMCPA-0: Theming the map view link on mobile and other corrections.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/cart/_checkout-click-collect.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/cart/_checkout-click-collect.scss
@@ -240,16 +240,20 @@
             min-height: 9rem;
 
             .store-name-and-address,
-            .store-open-hours,
-            .store-delivery-time {
+            .store-open-hours {
               margin-bottom: 0.9375rem;
+              width: 54%;
+            }
+
+            .store-delivery-time {
+              margin-bottom: 0;
               width: 54%;
             }
 
             .store-actions {
               position: absolute;
-              top: 25%;
-              #{$right}: 6%;
+              top: 16%;
+              #{$right}: 8%;
             }
           }
 
@@ -275,6 +279,10 @@
 
             .store-actions {
               .store-on-map {
+                display: none !important;
+              }
+
+              .view-on-map {
                 display: table-cell !important;
                 vertical-align: middle;
                 border: 1px solid $white-two;
@@ -358,9 +366,14 @@
 
           .delivery--time--value {
             display: block;
+            color: $black;
 
             @include breakpoint($desktop) {
               font-size: 0.875rem;
+            }
+
+            @include breakpoint($only-tablet) {
+              color: $marine-blue-two;
             }
           }
 
@@ -397,10 +410,12 @@
               @include breakpoint($only-mobile) {
                 min-width: 0;
                 width: 2%;
+                height: 3.063rem;
               }
             }
 
-            .store-on-map {
+            .store-on-map,
+            .view-on-map {
               color: $cerulean-two;
               font-size: 0.75rem;
               display: inline-block;
@@ -419,6 +434,14 @@
 
               @include breakpoint($only-mobile) {
                 width: 2%;
+                height: 3.063rem;
+                background: $white-five;
+              }
+            }
+
+            .view-on-map.mobile-only {
+              @include breakpoint($tablet) {
+                display: none;
               }
             }
           }
@@ -439,6 +462,7 @@
                 color: $grey-ash;
                 font-size: 0.875rem;
                 margin-bottom: 0.875rem;
+                font-weight: normal;
 
                 @include icon(chevrondown, after) {
                   color: $grey-ash;
@@ -450,6 +474,8 @@
                 }
 
                 &.open {
+                  font-weight: bold;
+
                   @include icon(chevronup, after) {
                     color: $grey-ash;
                     font-size: 1.938rem;
@@ -667,7 +693,9 @@
   }
 
   #selected-store-wrapper {
-    background: $white-four;
+    @include breakpoint($desktop) {
+      margin-top: 1.938rem;
+    }
 
     .selected-store-content {
       border-bottom: 1px solid $white-two;
@@ -676,6 +704,7 @@
       padding-#{$right}: 1.313rem;
       padding-top: 1.438rem;
       padding-bottom: 1.188rem;
+      background: $white-four;
 
       .store-name-and-address,
       .store-open-hours,
@@ -694,6 +723,7 @@
         padding-#{$right}: 0;
         padding-bottom: 0;
         margin-bottom: 1.563rem;
+        margin-top: 1.5rem;
 
         .store-name-and-address,
         .store-open-hours,
@@ -709,6 +739,10 @@
 
         .store-actions {
           .store-on-map {
+            display: none !important;
+          }
+
+          .view-on-map {
             display: table-cell !important;
             vertical-align: middle;
             border: 1px solid $white-two;
@@ -733,16 +767,20 @@
         min-height: 9rem;
 
         .store-name-and-address,
-        .store-open-hours,
-        .store-delivery-time {
+        .store-open-hours {
           margin-bottom: 0.9375rem;
+          width: 54%;
+        }
+
+        .store-delivery-time {
+          margin-bottom: 0;
           width: 54%;
         }
 
         .store-actions {
           position: absolute;
-          top: 25%;
-          #{$right}: 6%;
+          top: 16%;
+          #{$right}: 8%;
         }
       }
 
@@ -794,6 +832,7 @@
 
       .delivery--time--value {
         display: block;
+        color: $black;
 
         @include breakpoint($desktop) {
           font-size: 0.875rem;
@@ -821,7 +860,8 @@
           }
         }
 
-        .store-on-map {
+        .store-on-map,
+        .view-on-map {
           color: $cerulean-two;
           font-size: 0.75rem;
           display: inline-block;
@@ -840,6 +880,14 @@
 
           @include breakpoint($only-mobile) {
             width: 2%;
+            height: 3.063rem;
+            background: $white-five;
+          }
+        }
+
+        .view-on-map.mobile-only {
+          @include breakpoint($tablet) {
+            display: none;
           }
         }
       }
@@ -850,26 +898,30 @@
         color: $grey-ash;
         font-size: 0.875rem;
         position: relative;
+        cursor: pointer;
 
         @include breakpoint($desktop) {
           padding-bottom: 0;
+          color: $black;
 
           @include icon(chevrondown, after) {
-            color: $grey-ash;
+            color: $black;
             font-size: 1.938rem;
             position: absolute;
-            top: 0.5rem;
-            #{$left}: 5.688rem;
+            top: -0.375rem;
+            #{$left}: 5.625rem;
             padding-#{$left}: 0.625rem;
           }
 
           &.open {
+            font-weight: bold;
+
             @include icon(chevronup, after) {
-              color: $grey-ash;
+              color: $black;
               font-size: 1.938rem;
               position: absolute;
-              top: 0.5rem;
-              #{$left}: 5.688rem;
+              top: -0.375rem;
+              #{$left}: 5.625rem;
               padding-#{$left}: 0.625rem;
             }
 
@@ -880,10 +932,39 @@
         }
 
         @include breakpoint($only-tablet) {
-          font-size: 0.625rem;
+          font-size: 0.75rem;
           color: $black;
           font-weight: bold;
           padding-bottom: 0;
+        }
+
+        @include breakpoint($only-mobile) {
+          color: $black;
+          font-weight: normal;
+          font-size: 0.75rem;
+          margin-bottom: 0.3125rem;
+
+          @include icon(chevrondown, after) {
+            color: $grey-ash;
+            font-size: 1.438rem;
+            position: absolute;
+            top: -0.3125rem;
+            #{$left}: 5.25rem;
+          }
+
+          &.open {
+            @include icon(chevronup, after) {
+              color: $grey-ash;
+              font-size: 1.438rem;
+              position: absolute;
+              top: -0.3125rem;
+              #{$left}: 5.25rem;
+            }
+
+            + .open--hours {
+              display: block;
+            }
+          }
         }
       }
 
@@ -902,8 +983,20 @@
 
         @include breakpoint($only-tablet) {
           color: $greyish;
-          font-size: 0.625rem;
+          font-size: 0.75rem;
           padding-top: 0.25rem;
+        }
+
+        @include breakpoint($only-mobile) {
+          display: none;
+          color: $grey-ash;
+          font-size: 0.75rem;
+          line-height: 1.83;
+
+          .key-value-key {
+            width: 56%;
+            display: inline-block;
+          }
         }
       }
     }
